<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        tools:ignore="AppCompatResource"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add"
        tools:ignore="AppCompatResource"
        android:showAsAction="ifRoom"/>

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/action_location"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"/>

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/action_refresh"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <!-- Help -->
    <item android:id="@+id/action_parameter"
        android:title="@string/action_parameter"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />


    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/action_help"
        android:showAsAction="never"
    tools:ignore="AppCompatResource" />
    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/action_check_updates"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>